# coffee-data

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
docs/: 01_explore_cqi.html  02_interactive_cqi.html  03_data_analysis.html  coffee_pharmacognosy.html  colombia-travel-plan.md  index.html  what_makes_coffee_score_high.html
docs/coffee-pharmacognosy/: README.md  antimicrobial-research.md  bmei-summary.md  data-sources.md  field-observations.md  pipeline.md  pitch-to-farm.md  six-week-plan.md
docs/what-makes-coffee-score-high/: README.md  next-steps.md
notebooks/: 01_explore_cqi.ipynb  02_interactive_cqi.ipynb  03_data_analysis.ipynb  bmei_bioinputs.ipynb  coffee_pharmacognosy.ipynb  what_makes_coffee_score_high.ipynb
scrapers/: bmei.py  chembl.py  climate_merge.py  cqi_loader.py  cup_of_excellence.py  foodb.py  geocode.py  nasa_power.py  phenol_explorer.py  pubchem.py  soil.py  wcr_varieties.py
utils/: data.py  harvest.py
